[tool.poetry]
name = "transformer-sample"
version = "0.1.0"
description = ""
authors = ["t-ibayashi-safie <t-ibayashi@safie.jp>"]
readme = "README.md"
packages = [{include = "transformer_sample"}]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
